Dev/src/PS Enterprise/objects/Forecast_Worksheet__c.object
<CustomObject>
    <customHelpPage>ForecastWorksheetHelp</customHelpPage>
    <description>Helps users to set their forecasts. Displays information (on the Services Forecasts page) on actuals, backlog, sales, and business metrics for a particular region, practice, group, or project for a given summary period. A forecast worksheet exists for every forecast. Time periods have a master-detail relationship with forecast worksheets.</description>
    <fields>
        <fullName>Actual_Billable_Hours__c</fullName>
        <label>Actual Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Expenses_External__c</fullName>
        <label>Actual Expenses External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Expenses__c</fullName>
        <label>Actual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Milestone__c</fullName>
        <label>Actual Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Miscellaneous_Adjustments__c</fullName>
        <label>Actual Miscellaneous Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Timecard_External__c</fullName>
        <label>Actual Timecard External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Timecard__c</fullName>
        <label>Actual Timecard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Milestone__c</fullName>
        <label>Backlog Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Scheduled__c</fullName>
        <label>Backlog Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Unscheduled__c</fullName>
        <label>Backlog Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Total_With_Expenses__c</fullName>
        <label>Period Total With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Total__c</fullName>
        <label>Period Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Rate_With_Expenses__c</fullName>
        <label>Run Rate With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Rate__c</fullName>
        <label>Run Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_Total_With_Expenses__c</fullName>
        <label>Running Total With Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_Total__c</fullName>
        <label>Running Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Opps_High__c</fullName>
        <label>Sales Opps High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Opps_Low__c</fullName>
        <label>Sales Opps Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Opps_Medium__c</fullName>
        <label>Sales Opps Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_Expenses_External__c</fullName>
        <label>Submitted Expenses External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_Expenses__c</fullName>
        <label>Submitted Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_Timecard_External__c</fullName>
        <label>Submitted Timecard External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_Timecard__c</fullName>
        <label>Submitted Timecard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>Time_Period__c</referenceTo>
        <relationshipLabel>Forecast Worksheets</relationshipLabel>
        <relationshipName>Forecast_Worksheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Forecast Worksheet</label>
    <nameField>
        <displayFormat>Worksheet-{MMDDYYYY}-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Worksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>